--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Mark Wotton's Git Achievements</h2>
-Unlocked       16/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 156 points<br>
+Unlocked       16/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 160 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -30,6 +30,7 @@ Unlocked       16/      48 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Product Manager (Level 3)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Seamstress (Level 1)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Apprentice Seamstress (Level 2)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
+<li><div class="title">Apprentice Seamstress (Level 3)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 2)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 3)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -57,23 +58,23 @@ Unlocked       16/      48 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-8591 status
-8295 symbolic-ref
- 134 commit
-  94 diff
-  89 add
-  79 push
+9443 status
+9105 symbolic-ref
+ 167 commit
+ 111 push
+ 108 diff
+ 104 add
+  43 remote
   41 log
-  36 remote
-  33 pull
-  25 clone
-  24 checkout
+  38 pull
+  27 clone
+  25 checkout
   22 branch
+  12 rm
   12 init
   10 reset
    9 stash
    7 bisect
-   5 rm
    4 achievements
    3 reflog
    3 config
