New achievement Banker (Level 5)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Mark Wotton's Git Achievements</h2>
-Unlocked       18/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 204 points<br>
+Unlocked       18/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 210 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -47,6 +47,7 @@ Unlocked       18/      48 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Author (Level 5)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Author (Level 6)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Banker (Level 4)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
+<li><div class="title">Banker (Level 5)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Dentist</div>  <div class="info">Extracted patches using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -p.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
@@ -68,23 +69,23 @@ Unlocked       18/      48 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-11581 status
-11145 symbolic-ref
- 265 commit
- 204 push
- 163 diff
- 119 add
+12173 status
+11706 symbolic-ref
+ 288 commit
+ 226 push
+ 183 diff
+ 122 add
+  99 checkout
   65 remote
-  63 checkout
-  59 pull
-  46 log
-  46 branch
+  64 pull
+  49 branch
+  47 log
   39 clone
-  15 merge
+  31 merge
+  13 reset
   13 init
   12 rm
-  12 reset
-   9 stash
+  10 stash
    7 bisect
    4 blame
    4 achievements
