New achievement Master Socialite (Level 8)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Mark Wotton's Git Achievements</h2>
-Unlocked       18/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 214 points<br>
+Unlocked       18/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 223 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -58,6 +58,7 @@ Unlocked       18/      48 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Master Author (Level 7)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Author (Level 8)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Seamstress (Level 4)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -70,31 +71,32 @@ Unlocked       18/      48 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-13233 status
-12721 symbolic-ref
- 331 commit
- 239 push
- 232 diff
- 127 checkout
- 127 add
-  82 pull
-  70 remote
-  50 branch
-  49 log
-  39 clone
-  37 merge
+13899 status
+13352 symbolic-ref
+ 370 commit
+ 259 diff
+ 255 push
+ 147 checkout
+ 129 add
+  97 pull
+  76 remote
+  55 branch
+  51 log
+  41 clone
+  39 merge
+  15 reset
   13 rm
-  13 reset
   13 init
-  11 stash
+  12 stash
    7 bisect
-   4 blame
+   5 blame
    4 achievements
    3 reflog
    3 mv
    3 config
    2 submodule
    2 gl
+   2 clean
    2 Fri
    1 rebase
    1 help
