New achievement Merchant (Level 5)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Mark Wotton's Git Achievements</h2>
-Unlocked       21/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 306 points<br>
+Unlocked       21/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 312 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -72,6 +72,7 @@ Unlocked       21/      48 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Merchant (Level 4)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
+<li><div class="title">Merchant (Level 5)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Seamstress (Level 4)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Seamstress (Level 5)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
@@ -85,17 +86,17 @@ Unlocked       21/      48 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-25800 status
-24802 symbolic-ref
- 709 commit
- 511 push
- 406 diff
- 291 checkout
+26007 status
+24999 symbolic-ref
+ 717 commit
+ 521 push
+ 407 diff
+ 292 checkout
  259 add
- 257 pull
- 156 remote
-  83 log
-  82 clone
+ 258 pull
+ 172 remote
+  85 clone
+  84 log
   69 branch
   64 merge
   33 st
@@ -108,6 +109,7 @@ Git commands sorted by usage:
   21 config
   15 Tue
   12 Mon
+   8 Fri
    7 mv
    7 bisect
    5 rebase
@@ -116,7 +118,6 @@ Git commands sorted by usage:
    4 achievements
    3 reflog
    3 fetch
-   3 Fri
    2 submodule
    2 gl
    1 help
