New achievement Apprentice Collector (Level 2)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Mark Wotton's Git Achievements</h2>
-Unlocked       21/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 326 points<br>
+Unlocked       21/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 329 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -24,6 +24,7 @@ Unlocked       21/      48 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Blacksmith (Level 2)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 3)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
+<li><div class="title">Apprentice Collector (Level 2)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 3)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -88,42 +89,42 @@ Unlocked       21/      48 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-26726 status
-25689 symbolic-ref
- 739 commit
- 539 push
- 411 diff
- 296 checkout
- 272 add
- 269 pull
- 182 remote
-  90 clone
-  88 log
+30075 status
+28963 symbolic-ref
+ 776 commit
+ 564 push
+ 426 diff
+ 304 checkout
+ 301 add
+ 283 pull
+ 196 remote
+  98 clone
+  95 log
   69 branch
-  64 merge
+  65 merge
   33 st
-  32 blame
-  27 rm
+  33 blame
+  30 rm
+  26 stash
   26 reset
-  25 stash
-  22 init
+  25 init
   22 clean
   21 config
   18 Fri
   17 Tue
   14 Mon
+   7 rebase
    7 mv
    7 bisect
-   6 rebase
+   6 Wed
    5 co
-   5 Wed
+   4 fetch
    4 achievements
+   4 Thu
    3 reflog
-   3 fetch
    2 submodule
    2 gl
    1 help
-   1 Thu
 </pre>
 <script type="text/javascript">
 function showLocked() {
